<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f9fe"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <LinearLayout style="@style/ActionBarCompat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="false"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dip"
            android:scaleType="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8f9fe"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp">

        <TextView
            android:id="@+id/formName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="0dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:text="@string/account"
            android:textColor="#ff29549f"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#808080" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/waterSourceNameTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0sp"
                android:layout_marginTop="0sp"
                android:gravity="bottom"
                android:padding="0dp"
                android:text="@string/water_source_name"
                android:textColor="#333333"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/waterSourceName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0sp"
                android:layout_marginTop="0sp"
                android:padding="0dp"
                android:text="@string/water_source_name"
                android:textColor="#333333"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="0dp"
                android:weightSum="1.0">

                <TextView
                    android:id="@+id/transactionType"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0.333"
                    android:text="@string/type_of_expense"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/amountTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0.333"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0.333"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#808080" />

            <ListView
                android:id="@+id/transactionsListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>



